--- a/src/components/Sidepanel.module.css
+++ b/src/components/Sidepanel.module.css
@@ -1,5 +1,6 @@
-container  {
-    border: 1px solid red;
-    font-size: '20px';
-    width: 250;
+.container  {
+    border: 1px solid blue;
+    font-size: 20px;
+    width: 250px;
+    height: 100vh;
 }
