--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,129 @@
   border: 1px solid red;
   width: 100vw;
   height: 100vh;
+  background-color: #cfeeee;
+}
+
+.sidebar {
+  background-color: #58cce7;
+  height: 100vh;
+  width: 250px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.button {
+  border: 1px solid rgba(255,255,255,0.5);
+  background-color: transparent;
+  border-radius: 10px;
+  padding: 10px;
+  margin: 10px;
+  color: white
+}
+
+.history {
+  padding: 10px;
+  margin: 10px;
+  height: 100%;
+}
+
+.history li {
+  list-style-type: none;
+  padding: 15px 0;
+  cursor: pointer;
+}
+
+.nav {
+  border-top: 1px solid rgba(255,255,255,0.5);
+  padding: 10px;
+  margin: 10px;
+}
+
+.main{
+  /* height: 100vh; */
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+  overflow-y: auto; 
+  flex: 1;
+}
+
+.info {
+  color: rgba(255,255,255,0.5);
+  font-size: 12px;
+  padding: 10px;
+}
+
+.bottom-section {
+  width: 90%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  /* position: fixed;
+  bottom: 0;
+  background-color: white; */
+}
+
+.input-container {
+  position: relative;
+  width: 100%;
+  max-width: 650px;
+}
+
+.input {
+  width: 100%;
+  border: none;
+  font-size: 20px;
+  background-color: rgba(255,255,255,0.05);
+  padding: 12px 15px;
+  border-radius: 10px;
+  box-shadow: rgba(0,0,0,0.05) 0 50px 50px,
+              rgba(0,0,0,0.05) 0 -12px 30px,
+              rgba(0,0,0,0.05) 0 4px 6px,
+              rgba(0,0,0,0.05) 0 12px 3px,
+              rgba(0,0,0,0.05) 0 -3px 5px;
+}
+
+.input:focus {
+  outline: none;
+}
+
+#submit {
+  position: absolute;
+  bottom: 15px;
+  right: 0;
+  cursor: pointer;
+  color: black
+}
+
+.feed {
+  /* overflow: scroll; */
+  width: 90%;
+  padding: 0;
+  white-space: nowrap;
+}
+
+.feed li {
+  display: flex;
+  background-color: #54bae9;
+  width: 100%;
+  padding: 20px;
+  margin: 20px 0;
+}
+
+.feed p {
+  color: black;
+  font-size: 14px;
+  text-align: left;
+}
+
+.feed p.role {
+  min-width: 100px;
 }
 
 
